--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - checkout
       - run:
+          name: installing bundler
+          command: gem install bundler:2.2.17
+      - run:
+          name: installing bundler
+          command: bundle config set --local path 'vendor/bundle'
+      - run:
           name: Which bundler?
           environment:
             BUNDLE_PATH: vendor/bundle
