--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,7 @@ jobs:
       - checkout
       - run:
           name: installing bundler
-          command: gem install bundler:2.2.17
-      - run:
-          name: installing bundler
-          command: bundle config set --local path 'vendor/bundle'
-      
-      - ruby/bundle-install
+          command: bundle install
       - run:
           name: Run RSpec
           command: bundle exec rspec spec
