--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
     executor: ruby/default
     steps:
       - checkout
+      - run: 
+          name: install sqlite 3
+          command: apt-get install libsqlite3-dev
       - run:
           name: installing bundler
           command: bundle install
