--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - run: 
           name: install sqlite 3
-          command: sudo apt-get install libsqlite3-dev
+          command: sudo apt-get install sqlite3
       - run:
           name: installing bundler
           command: bundle install
