--- a/config/database.yml
+++ b/config/database.yml
@@ -23,4 +23,4 @@ test:
 production:
   adapter: mysql2
   # database: db/production.sqlite3
-  url: ENV['DATABASE_URL']
+  url: <%= ENV['DATABASE_URL'] %>
