feat: add rubocop to circle ci and fix lineLength metrics

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,7 @@ Documentation:
   Enabled: false
 
 # temporary
-Metrics/LineLength:
+Layout/LineLength:
   Max: 400
 
 Style/FrozenStringLiteralComment:
